# docoxide

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  Taskfile.yml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-crates-io.yml  publish-npm.yml  publish-pypi.yml  publish-test-pypi.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/docoxide/: __init__.py  cli.py  docoxide.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_api.py
bindings/wasm/: Cargo.toml  README.md  cli.cjs  package.json
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: api.test.js
crates/docoxide/: Cargo.toml  README.md
crates/docoxide/src/: config.rs  error.rs  fonts.rs  html.rs  lib.rs  main.rs  page_rule.rs  painter.rs  pdf.rs  pipeline.rs  source.rs  types.rs
crates/docoxide/tests/: convert.rs
crates/docoxide/tests/fixtures/: at-page-landscape.html  at-page.html  external.css  linked.html  multipage.html  page-break-css-class.html  page-break.html  simple.html  unstyled.html
crates/docoxide/tests/snapshots/: convert__page_break_before.snap  convert__stylesheet_multiple.snap
scripts/: README.md  bump.py  pyproject.toml  tag.py
