[workspace]
resolver = "3"
members = [
    "crates/docoxide",
    "bindings/python",
    "bindings/wasm",
]
default-members = [
    "crates/docoxide",
    "bindings/wasm",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/docoxide/docoxide"
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
rust-version = "1.85"
