[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "docoxide"
description = "Python bindings for docoxide, a fast HTML to PDF converter written in Rust"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [{ name = "Ronie Martinez", email = "ronmarti18@gmail.com" }]
keywords = ["cli", "converter", "html", "pdf", "rust"]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: HTML",
]
dynamic = ["version"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/docoxide/docoxide"
Repository = "https://github.com/docoxide/docoxide"

[project.scripts]
docoxide = "docoxide.cli:main"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "N", "RUF", "SIM", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"python/docoxide/__init__.py" = ["F403", "F405", "I001"]
