[package]
name = "docoxide"
description = "HTML to PDF conversion library and CLI"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["cli", "converter", "html", "pdf"]
categories = ["command-line-utilities", "text-processing", "web-programming"]

[lib]
name = "docoxide"
path = "src/lib.rs"

[[bin]]
name = "docoxide"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
